--- a/Salesstatic/res/values/strings.xml
+++ b/Salesstatic/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="app_name">Salesstatic</string>
     <string name="action_settings">Settings</string>
@@ -8,6 +8,41 @@
     <string name="main_total">总量查询</string>
     <string name="main_purchase">进货录入</string>
     <string name="main_sales">销售录入</string>
-    <string name="main_error_entry">损耗录入</string>
+    <string name="main_error_entry">录入列表</string>
+    <string name="main_search">信息检索</string>
+    
+    <string name="sales_name">品名</string>
+    <string name="sales_name_error">请输入品名!</string>
+    <string name="ok">确定</string>
+    
+    <string name="purchase_title">进货录入</string>
+    <string name="purchase_nums">数量</string>
+    <string name="purchase_nums_error">进货数量不能为空！</string>
+    <string name="purchase_price">进价</string>
+    <string name="purchase_standard">规格</string>
+    <string name="purchase_instruction">功能</string>
+    <string name="purchase_success">录入成功!</string>
+    <string name="purchase_error">录入失败!</string>
+    
+    <string name="total_name">品名</string>
+    <string name="total_purchase">进货量</string>
+    <string name="total_sales">销售量</string>
+    <string name="total_inventory">库存</string>
+    <string name="total_price">进价</string>
+    <string name="total_standard">规格</string>
+    <string name="total_instruction">功能</string>
+    
+    <string name="sales_title">销售录入</string>
+    <string name="sales_nums">数量</string>
+    <string name="sales_nums_error">销售数量不能为空！</string>
+    <string name="sales_price">售价</string>
+    <string name="sales_customer">客户</string>
+    <string name="sales_customer_tel">客户电话</string>
+    <string name="sales_customer_phone">客户手机</string>
+    <string name="sales_customer_demand">客户需求</string>
+    <string name="sales_success">录入成功!</string>
+    <string name="sales_error">录入失败!</string>
+    <string name="sales_continue">继续录入</string>
+    
 
 </resources>
