--- a/Salesstatic/res/values/strings.xml
+++ b/Salesstatic/res/values/strings.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">Salesstatic</string>
+    <string name="app_name">销售管理</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     
     <string name="main_total">信息概览</string>
     <string name="main_purchase">进货录入</string>
     <string name="main_sales">销售录入</string>
-    <string name="main_entry">录入查询</string>
+    <string name="main_import">数据导入</string>
+    <string name="main_import_success">导入成功</string>
+    <string name="main_export">数据导出</string>
+    <string name="main_export_success">导出成功</string>
     <string name="main_search">销售查询</string>
+    <string name="main_suggest_out">售价查询</string>
+    <string name="main_suggest_in">售价录入</string>
     
     <string name="sales_name">品名</string>
     <string name="sales_name_error">请输入正确品名!</string>
@@ -21,6 +26,8 @@
     <string name="purchase_nums_error">进货数量不能为空！</string>
     <string name="purchase_price">进价</string>
     <string name="purchase_price_error">进价输入错误！</string>
+    <string name="purchase_sell_price">售价</string>
+    <string name="purchase_sell_price_error">售价输入错误！</string>
     <string name="purchase_standard">规格</string>
     <string name="purchase_instruction">功能</string>
     <string name="purchase_success">录入成功!</string>
@@ -33,6 +40,8 @@
     <string name="total_price">进价</string>
     <string name="total_standard">规格</string>
     <string name="total_instruction">功能</string>
+    <string name="total_purchase_total">总进价：<xliff:g>%1$2f</xliff:g></string>
+    <string name="total_sales_total">总售价：<xliff:g>%1$2f</xliff:g></string>
     
     <string name="sales_title">销售录入</string>
     <string name="sales_name_not_exists">品名错误，是否只录入或更新联系人信息？</string>
@@ -41,6 +50,7 @@
     <string name="sales_price">售价</string>
     <string name="sales_price_error">售价不能为空！</string>
     <string name="sales_customer">客户</string>
+    <string name="sales_customer_price">客户特定价</string>
     <string name="sales_customer_error">客户不能为空</string>
     <string name="sales_customer_entry_error">客户信息录入失败！</string>
     <string name="sales_customer_tel">电话</string>
@@ -56,11 +66,14 @@
     <string name="dialog_loading_title">正在存储</string>
     <string name="dialog_loading_content">请稍后……</string>
     
-    <string name="search_merchandise">品&#160;&#160;&#160;&#160;名</string>
-    <string name="search_customer">客&#160;&#160;&#160;&#160;户</string>
+    <string name="search_merchandise">请输入：&#160;&#160;品名</string>
+    <string name="search_customer">请输入：&#160;&#160;客户</string>
     <string name="search_ok">搜索</string>
     <string name="search_starttime">起始时间</string>
     <string name="search_endtime">终止时间</string>
+    
+    <string name="suggest_in_normal">正常售价</string>
+    <string name="suggest_in_spical">专用售价</string>
     
     <string name="time">时间</string>
 
